Added `delete_playlist` and `delete_playlist_<<key>>` as template variable options to the [Playlist Default](https://metamanager.wiki/en/latest/defaults/playlist.html).
Added `region` as a template variable options to the [`streaming` Overlay](https://metamanager.wiki/en/latest/defaults/overlays/streaming.html) and [`streaming` Collection](https://metamanager.wiki/en/latest/defaults/both/streaming.html) to allow these lists to show items in that region.
Added AppleTV to te [FlixPatrol Default](https://metamanager.wiki/en/latest/defaults/overlays/flixpatrol.html).
Added `radarr_search` and `sonarr_search` as template variable options to all Collection Defaults.
Updated `network` and `franchise` defaults

# Bug Fixes
Fixes Bug with `--time` that caused the times not to display correctly.
Fixes `mal_search` search bug.
Fixes #1277 corrects bug setting TMDb region.
Fixes a Bug where missing items items wouldn't be sent to radarr if no items were found in the library.
Fixes a Bug with template conditionals causing them to sometimes use the wrong result.
Fixes #1285 Wiki error.
Fixes a Bug with the `mass_poster_update` and `mass_background_update` Library Operations where they would sometimes throw a 406 Error.
Fixes a Bug with the `mass_poster_update` Library Operation where it would also update backgrounds in addition to posters.
Fixes multiple unnecessary items loads from plex.
Fixes a Bug with using year filters with no modifier.
Fixes a Bug where the `dimensional_asset_rename` Setting would rename title cards and season posters to show posters.
Fixes [`trakt_userlist` Builder](https://metamanager.wiki/en/latest/metadata/builders/trakt.html#trakt-userlist) where option `recommended` should have been `recommendations`.
Fixes overlay remove/reset operations.
Closes #1325 Fixes a Bug where `tmdb_vote_count` would be rejected as a filter.
Closes #1189 Fixes a Bug in the Resolution Default where the position would be completely off when changed

Various other Minor Fixes